DevTools: Network.getCookies should return -1 for null expiry dates

Bug: 789684
Change-Id: I0b0f387c2d95fa5ac01fc28a11e917c55bb673c5
Reviewed-on: https://chromium-review.googlesource.com/797914
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Joel Einbinder <einbinder@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520341}
Former-commit-id: 37e0cc6df89b402c25ce4f15884b55810a649fbb