third_party/WebKit/LayoutTests/http/tests/inspector-protocol/cookies-protocol-test.js
@@ -18,6 +18,8 @@
         suffix += `, session`;
       if (cookie.sameSite)
         suffix += `, ${cookie.sameSite}`;
+      if (cookie.expires !== -1)
+        suffix += `, expires`;
       testRunner.log(`name: ${cookie.name}, value: ${cookie.value}, domain: ${cookie.domain}, path: ${cookie.path}${suffix}`);
     }
   }
